# python-ci-lab

./: .gitignore  pyproject.toml
.github/workflows/: ci.yml
src/palinlib/: __init__.py  palindrome.py
tests/: test_all.py
