[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "palinlib"
version = "0.1.0"
description = "A tiny library for checking palindromes."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "you@example.com" }]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Education",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Education",
]

[project.optional-dependencies]
# Dev/test tools specified as ranges so consumers aren't over-pinned
dev = [
  "pytest>=7,<8",
  "pytest-cov>=4,<5",
  "build>=1,<2",
]

[project.urls]
Homepage = "https://example.com/palinlib"
Repository = "https://example.com/palinlib-repo"
Issues = "https://example.com/palinlib/issues"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["palinlib*"]

[tool.pytest.ini_options]
addopts = "-ra --cov=palinlib --cov-report=term-missing:skip-covered --no-cov-on-fail"
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["palinlib"]

[tool.coverage.report]
show_missing = true
fail_under = 90
